fix: moved draft-saved icon to bottom on mobile devices. Explicitly hiding non-mobile draft-saved icon on mobile screens

--- a/static/less/composer.less
+++ b/static/less/composer.less
@@ -431,7 +431,7 @@
 
 			.draft-icon {
 				position: absolute;
-				top: 1em;
+				bottom: 1em;
 				right: 0em;
 
 				&::after {
